# mobile_manipulator_test_setup

./: README.md  Screencast from 03-01-2024 11_41_50 AM.webm  simulation_example.md
base_movement/: package.xml  setup.cfg  setup.py
base_movement/base_movement/: base_movement.py
collision_objects/: package.xml  setup.cfg  setup.py
collision_objects/collision_objects/: collision_objects.py
logger/: package.xml  setup.py
logger/logger/: tf_logger.py  tool0_logger.py
manipulators/franka_ros2/panda_moveit_config/launch/: moveit_rviz.launch.py  panda.launch.py
mobile_manipulator_bringup/: CMakeLists.txt  package.xml
mobile_manipulator_bringup/config/: params.yaml
mobile_manipulator_bringup/launch/: D-002.launch.py  simulation.launch.py  test_setup.launch.py
mobile_manipulator_interfaces/: CMakeLists.txt  package.xml
mobile_manipulator_interfaces/msg/: Pose.msg  Quaternion.msg
mobile_manipulator_interfaces/srv/: SetTargetPosition.srv
motor_controller/: package.xml  setup.py
motor_controller/motor_controller/: motor_controller.py
path_planning/: CMakeLists.txt  package.xml
path_planning/src/: dynamic_path_planner.cpp  path_planning.cpp  static_path_planner.cpp
target_position/: CMakeLists.txt  package.xml  setup.cfg  setup.py
target_position/src/: target_position.cpp
target_position/target_position/: target_position.py
target_position_py/: package.xml  setup.cfg  setup.py
target_position_py/target_position_py/: target_position.py
